Step2 - 구간 제거 요구사항 반영 (#841)
* docs: 2단계 요구사항 정리

* refactor: 상수명 네이밍 컨벤션 지키기

* refactor: 빌더 패턴으 장점을 살리지 못하는 createSection() 수정

* refactor: if 문에서 '{}' 생략 된 부분 추가

* refactor: 구간 생성 분기 조건 부분 메서드 추출로 가독성 높이기

* refactor: Sections of(Section... section) 가변인수 사용하는 부분 개선

* refactor: @MethodSource 사용으로 인한 오류 테스트 pure function 으로 수정

* test: 구간 제거 인수 테스트 작성

* feat: 위치에 상관없이 지하철 노선에 역을 제거

* test: 컨트롤러의 구간 제거 예외 유닛 테스트 추가